src/objects/ffbc__BillingSchedule__c.object
<CustomObject>
    <customHelpPage>ffbc__billingschedulehelp</customHelpPage>
    <description>Contains the billing schedules used to create billing documents from contracts in FinancialForce Billing Central.
EARLY ADOPTERS: The Billing Schedule object is currently for FinancialForce internal use only and is likely to be significantly changed or replaced in a future release. We recommend that you do not build any custom functionality around this object that you still require after upgrading to a future version of Billing Central. Scheduling of future billing will be retained, but may use a different solution.</description>
    <fields>
        <fullName>ffbc__BillingDate__c</fullName>
        <description>Date on which a billing document is due to be created for this billing schedule.</description>
        <inlineHelpText>Date on which a billing document is due to be created for this billing schedule.</inlineHelpText>
        <label>Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingDocumentLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the billing document line item generated from this billing schedule.</description>
        <inlineHelpText>Lookup to the billing document line item generated from this billing schedule.</inlineHelpText>
        <label>Billing Document Line Item</label>
        <referenceTo>fferpcore__BillingDocumentLineItem__c</referenceTo>
        <relationshipLabel>Related Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingPeriodEndDate__c</fullName>
        <description>Last day of the billing period for this billing schedule.</description>
        <inlineHelpText>Last day of the billing period for this billing schedule.</inlineHelpText>
        <label>Billing Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingPeriodStartDate__c</fullName>
        <description>First day of the billing period for this billing schedule.</description>
        <inlineHelpText>First day of the billing period for this billing schedule.</inlineHelpText>
        <label>Billing Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractGrouping__c</fullName>
        <description>Contract Id to which this billing schedule belongs.</description>
        <formula>ffbc__ContractLineItem__r.ffbc__Contract__r.Name</formula>
        <inlineHelpText>Contract Id to which this billing schedule belongs.</inlineHelpText>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contract line item that is to be processed.</description>
        <inlineHelpText>Lookup to the contract line item that is to be processed.</inlineHelpText>
        <label>Contract Line Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ffbc__ContractLineItem__c.ffbc__ContractType__c</field>
                <operation>equals</operation>
                <value>Contract</value>
            </filterItems>
            <filterItems>
                <field>ffbc__ContractLineItem__c.ffbc__ContractStatus__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ffbc__ContractLineItem__c</referenceTo>
        <relationshipLabel>Related Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractStatus__c</fullName>
        <description>Formula field containing the status of the contract to which the billing schedule belongs.</description>
        <formula>ffbc__ContractLineItem__r.ffbc__ContractStatus__c</formula>
        <inlineHelpText>Status of the contract to which this billing schedule belongs.</inlineHelpText>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractType__c</fullName>
        <description>Formula field containing the type of contract to which this billing schedule belongs.</description>
        <formula>ffbc__ContractLineItem__r.ffbc__ContractType__c</formula>
        <inlineHelpText>&gt;Type of contract to which this billing schedule belongs.</inlineHelpText>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__IsFinalSchedule__c</fullName>
        <description>Indicates whether this is the last billing schedule for the contract line item.</description>
        <formula>AND
        	(
        		!ISNULL(ffbc__ContractLineItem__c),
        		OR
                (
                    ffbc__BillingPeriodEndDate__c &gt;= ffbc__ContractLineItem__r.ffbc__EndDate__c,
                    ISPICKVAL(ffbc__ContractLineItem__r.ffbc__BillingType__c, &apos;One-off&apos;)
                )
        	)</formula>
        <inlineHelpText>Indicates whether this is the last billing schedule for the contract line item.</inlineHelpText>
        <label>Final Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__Month__c</fullName>
        <description>Formula field which calculates the month of the Billing Period Start Date.</description>
        <formula>MONTH( ffbc__BillingPeriodStartDate__c)</formula>
        <inlineHelpText>Formula field which calculates the month of the Billing Period Start Date.</inlineHelpText>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of the billing schedule. When the billing schedule is created, the sales price is copied from the related contract line item. If you edit this field, the contract line item is not updated.</description>
        <inlineHelpText>Value of the billing schedule. When the billing schedule is created, the sales price is copied from the related contract line item. If you edit this field, the contract line item is not updated.</inlineHelpText>
        <label>Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__Year__c</fullName>
        <description>Formula field which calculates the year of the Billing Period Start Date.</description>
        <formula>YEAR( ffbc__BillingPeriodStartDate__c)</formula>
        <inlineHelpText>Formula field which calculates the year of the Billing Period Start Date.</inlineHelpText>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Billing Schedule</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractGrouping__c</columns>
        <columns>ffbc__ContractLineItem__c</columns>
        <columns>ffbc__BillingDocumentLineItem__c</columns>
        <columns>ffbc__BillingDate__c</columns>
        <columns>ffbc__BillingPeriodStartDate__c</columns>
        <columns>ffbc__BillingPeriodEndDate__c</columns>
        <columns>ffbc__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BS{0000000000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>